# python-pact

./: pyproject.toml
tests/: test_pact.py
