[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-pact"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name="Omer Menashe", email="unspecified@mail.com" }
]
keywords = ["python-pact", "pact"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Source" = "https://github.com/iamomerm/python-pact"
